--- a/styles/styles.css
+++ b/styles/styles.css
@@ -409,3 +409,16 @@ footer p {
     font-weight: 400;
     font-style: normal;
 }
+
+/* Estilos para cartel de finalizada la compra */
+
+.agradecimiento {
+    display: none;
+    background-color: #e0ffe0;
+    padding: 20px;
+    margin-top: 20px;
+    border: 2px solid #00a000;
+    text-align: center;
+    font-size: 40px;
+    border-radius: 8px;
+}
